Apply many changes
